<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/alertDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8">

        <RelativeLayout
            android:id="@+id/lytTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/alert_success_bg"
            android:padding="10dp"
            android:paddingBottom="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/icon_alert_desc"
                android:src="@drawable/ic_success_32dp" />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imgIcon"
                android:text="@string/attention"
                android:textColor="@color/textWhite"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lytTitle">

            <you.thiago.simplealert.DynamicScrollView
                android:id="@+id/containerContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtMessage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/alertMsg"
                        android:textColor="@color/textColor"
                        android:textSize="15sp" />

                    <View
                        android:id="@+id/viewDivider"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="16dp"
                        android:background="@color/textColor"/>

                    <TextView
                        android:id="@+id/txtExtras"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/alertExtras"
                        android:textColor="@color/textColor"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/btnShowExtras"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:background="@android:color/transparent"
                        android:text="@string/fmt_btn_show_extras"
                        android:textColor="@color/alert_btn_confirm"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        android:visibility="gone"/>

                </LinearLayout>

            </you.thiago.simplealert.DynamicScrollView>

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@android:color/transparent"
                android:padding="5dp"
                android:text="@string/btn_confirm"
                android:textColor="@color/alert_btn_confirm"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/btnCancel"
                app:layout_constraintTop_toBottomOf="@+id/containerContent" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@android:color/transparent"
                android:padding="5dp"
                android:text="@string/btn_cancel"
                android:textColor="@color/alert_btn_cancel"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/containerContent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>